--- a/plugin.ini
+++ b/plugin.ini
@@ -1,11 +1,11 @@
 [Plugin description]
 name =              "Short Profile"
 version =           "0.1"
-url =               "https://github.com/egoexpress/known-shortprofle"
-author =            "Bjoern Stierand"
-author_email =      "bjoern-known@innovention.de"
-author_url =        "https://bjoern.stierand.org"
-description =       "This plugin shortens the links in the Known profile and adds additional icons"
+url =               "https://github.com/absolonkent/known-shortprofle"
+author =            "Absolon Kent"
+author_email =      "absolon@kentcreativemedia.com"
+author_url =        "https://kentcreativemedia.com"
+description =       "This plugin, based on the Short Profile plugin by Bjoern Stierand, adds Font Awesome icons and shortens the URLs found on the Known profile page."
 
 [requirements]
 idno =        0.9.2
