--- a/plugin.ini
+++ b/plugin.ini
@@ -8,4 +8,4 @@ author_url =        "https://kentcreativemedia.com"
 description =       "This plugin, based on the Short Profile plugin by Bjoern Stierand, adds Font Awesome icons and shortens the URLs found on the Known profile page."
 
 [requirements]
-idno =        0.9.2
+idno =        "0.9.2"
